Disiss bubbles on menu open

Observe NSMenuDidBeginTrackingNotification if the widget is
TYPE_BUBBLE and close the widget when notified. Post
NSMenuDidBeginTrackingNotification if the menu to be opened
is of TYPE_MENU instead of NSMenu. We have to check the
location of mouse pointer because we should not dismiss the
bubble when the menu is for that bubble.

Bug: 692896
Change-Id: I0d06cf2fb6f3c586a3943a7a60a3825cd48bb74e