ui/views/cocoa/views_nswindow_delegate.h
@@ -45,6 +45,9 @@ VIEWS_EXPORT
 // Notify that the system control tint changed.
 - (void)onSystemControlTintChanged:(NSNotification*)notification;
 
+// Notify that context menu will open.
+- (void)onMenuWillOpen:(NSNotification*)notification;
+
 // Called on the delegate of a modal sheet when its modal session ends.
 - (void)sheetDidEnd:(NSWindow*)sheet
          returnCode:(NSInteger)returnCode
